--- a/app/user/welcome.hbs
+++ b/app/user/welcome.hbs
@@ -1,7 +1,2 @@
-<h3>Hey! You have to log in before using NodeHero :/</h3>
-
-<form action="/login" method="post">
-  <input name="username" id="username" type="text" placeholder="Your username" />
-  <input name="password" id="password" type="password" placeholder="Your password"/>
-  <input type="submit" />
-</form>
+<h2>Welcome!</h2>
+<a href="/profile">Click here to watch your profile</a>
